@@ -36,7 +36,7 @@ com.google.inject.guice.version = 3.0
 /com.googlecode.concurrentlinkedhashmap/concurrentlinkedhashmap-lru = 1.2
 /com.googlecode.juniversalchardet/juniversalchardet = 1.0.3
 /com.googlecode.mp4parser/isoparser = 1.0-RC-1
-/com.ibm.icu/icu4j = 52.1
+/com.ibm.icu/icu4j = 53.1
 /com.spatial4j/spatial4j = 0.4.1
 
 com.sun.jersey.version = 1.8
