@@ -58,6 +58,9 @@ Bug fixes
 
 * LUCENE-5668: Fix off-by-one in TieredMergePolicy (Mike McCandless)
 
+* LUCENE-5671: Upgrade ICU version to fix an ICU concurrency problem that
+  could cause exceptions when indexing. (feedly team, Robert Muir)
+
 ======================= Lucene 4.8.0 =======================
 
 System Requirements
